--- a/style.css
+++ b/style.css
@@ -11,4 +11,10 @@ text-transform: uppercase;
 color: #000000
 font-weight: bold;
 font-size:  22px;
+text-decoration: none;
+}
+
+nav li {
+display: inline;
+margin: 0 0 0 15px;
 }
