--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 header {
 background: #BBBBBB;
+padding:20px;
 }
 
 nav li {
@@ -16,11 +17,23 @@ text-decoration: none;
 
 nav {
 position:absolute;
-top: 0;
+top: 110px;
 right:0;
 }
 
 nav li {
 display: inline;
 margin: 0 0 0 15px;
+}
+
+.caixa {
+width= 940px;
+position:relative;
+margin: 0 auto;
+}
+
+.produtos {
+ width: 940px;
+ margin: 0 auto;
+ padding:50px 0;
 }
